# pulse-messenger

./: .env.native.example  .gitignore  README.md  RELEASE_NOTES.md  capacitor.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  release.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/app/pulse/messenger/: MainActivity.java
android/app/src/main/res/values/: strings.xml
app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/api/calls/token/: route.ts
app/api/conversations/: route.ts
app/api/conversations/[id]/messages/: route.ts
app/api/media/: route.ts
app/api/media/upload/: route.ts
app/api/messages/[id]/reactions/: route.ts
app/api/updates/: route.ts
app/auth/sign-in/: page.tsx
app/onboarding/: actions.ts  page.tsx
components/: pulse-logo.tsx
components/auth/: auth-form.tsx  onboarding-form.tsx
components/messenger/: call-room.tsx  pulse-app.tsx  update-status.tsx
lib/auth/: require-user.ts  server.ts
lib/db/: schema.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
