[package]
name = "pulse"
version = "0.1.1"
description = "Pulse messenger"
authors = ["Pulse"]
edition = "2021"

[lib]
name = "pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
